add routes to docs
